<resources>
    <string name="app_name">走兔同城</string>
    <!--测试-->
    <string name="test_address">柳市巴度电商园飞龙电器111111111内车站路666号1111111111111111111111</string>
    <!--测试-->
    <!--bottom-->
    <string name="string_bottom_first_shouye">首页</string>
    <string name="string_bottom_second_dingcan">订餐</string>
    <string name="string_bottom_third_gouwuche">购物车</string>
    <string name="string_bottom_fourth_gerenzhongxin">个人中心</string>
    <!--bottom-->

    <!--首页start-->
    <string name="string_shouye_32_c">32℃</string>
    <string name="string_shouye_24_c">24~</string>
    <string name="string_test_weather">晴转多云</string>
    <string name="string_input_keyword">请输入单号或者关键字</string>
    <string name="string_search">搜索</string>
    <!--首页end-->

    <!--个人注册中心-->
    <string name="string_username">手机号</string>
    <string name="string_password">密码</string>
    <string name="string_vality">验证码</string>
    <string name="string_register">注册</string>
    <string name="string_forget">忘记密码?</string>
    <string name="string_get_vality">输入手机号获取验证码</string>
    <string name="string_input_you_need">输入您想要的商品快速查找</string>

    <!--个人注册中心-->

    <!--个人登录中心-->
    <string name="string_remember_my_login_data">记住我的登入信息</string>
    <string name="string_login">登入</string>

    <!--个人登录中心-->
    <!--美食配送-->
    <string name="string_price">价格</string>
    <string name="string_dis">距离</string>
    <string name="string_sell">销量</string>
    <string name="string_comment">评分</string>

    <string name="string_test_dongchi">东池便当 (柳市店)</string>
    <string name="string_16_yuan">¥16</string>
    <string name="string_begin_send">起送</string>
    <string name="string_month_sell">月售1921单</string>
    <string name="string_send_fee">配送费</string>
    <string name="string_min_meter">32分钟 / 1.13千米</string>
    <string name="string_four_point_three">4.3</string>
    <string name="string_plane_to_begin">预定中,09:30分开始配送</string>
    <string name="string_first">首</string>
    <string name="string_redus">减</string>
    <string name="string_new_account_redus_im">(不与其它活动共享)新用户下单立减6元</string>
    <string name="string_four_activies">4个活动</string>
    <string name="string_online_pay_redus">在线支付满17减5</string>
    <!--美食配送-->
    <!--24小时便利店-->
    <string name="string_today">今日</string>
    <string name="string_sale">卖点</string>
    <string name="string_goto_send">统一方便全场九折,限量促销,走兔专送</string>
    <string name="string_service_tel">服务热线:400-662-0202</string>
    <string name="string_product_support_by_goto_city">货品配送由走兔同城提供支持</string>
    <string name="string_snack_food">休闲零食</string>
    <!--24小时便利店-->

    <!--同城快递-->
    <string name="string_i_want_sending">我要寄件</string>
    <string name="string_goods_tracking">物流追踪</string>
    <string name="string_fee_checking">运费查询</string>
    <string name="string_time_checking">时效查询</string>
    <string name="string_site_checking">网点查询</string>
    <string name="string_rang_checking">范围查询</string>
    <!--同城快递-->

    <!--同城快递 范围查询-->
    <string name="string_we_comes_on_time">我们随叫随到</string>
    <string name="string_no_matter_what">NO MATTER WHAT</string>
    <string name="string_we_are_on_call">WE ARE ON CALL</string>
    <string name="string_area_select">选择地区:</string>
    <string name="string_area_select_please">请选择地区</string>
    <string name="string_select">查询</string>
    <string name="string_liu_shi_zhen">柳市镇</string>
    <string name="string_all_support_service">全境提供服务</string>
    <string name="string_the_site_support_select">以下网点可供选择</string>
    <string name="string_address_service_site">服务网点地址</string>
    <string name="string_name_tel_service_site">服务网点负责人姓名&amp;号码</string>
    <!--同城快递 范围查询-->
    
    <!--同城快递 网点查询-->
    <string name="string_i_am_young_i_need_rush">我年轻我要闯</string>
    <string name="string_we_are_young_dream">WE ARE YOUNG DREAM</string>
    <string name="string_can_not_wait">CANT WAIT</string>
    <string name="string_click_here_find_nearby">点击此处查找附近网点</string>
    <string name="string_site_detail">网点详情:</string>
    <!--同城快递 网点查询-->
    <!--同城快递 时效查询-->
    <string name="string_address_receive">收件地址:</string>
    <string name="string_address_sender">发件地址:</string>
    <string name="string_time_sending">寄件时间:</string>
    <string name="string_please_input_address_or_loc">请输入地址或者定位</string>
    <string name="string_please_input_time">请输入寄件时间</string>
    <string name="string_please_input_weight">请输入重量(Kg)</string>
    <!--同城快递 时效查询-->
    <!--同城快递 运费查询-->
    <string name="string_passing_by_heart">用心传递 成就所托</string>
    <string name="string_carefully_transfer_the">CAREFULLY TRANSFER THE</string>
    <string name="string_achievement_holds">ACHIEVEMENT HOLDS</string>
    <string name="string_weight">重量:</string>
    <string name="string_valume">体积:</string>
    <string name="string_long_width_height">长X宽X高(cm)</string>
    <string name="string_twelve_yuan">12元</string>
    <!--同城快递 运费查询-->

    <!--同城快递 物流追踪-->
    <string name="string_we_only_support_better_service">我们只提供更好更优质的服务</string>
    <string name="string_we_only_provide_better_quality">WE ONLY PROVIDE BETTER QUALITY</string>
    <string name="string_service">SERVICE</string>
    <string name="string_dear_customer">亲爱的客户,您的快件</string>
    <string name="string_receive_by_time">于2016年5月1日下午3点45分收件</string>
    <string name="string_receiver_passer_tel">收件快递员王建国,联系电话17757727257</string>
    <string name="string_please_hold_by_patient">请您耐心等候哦!</string>

    <!--同城快递 物流追踪-->

    <!--同城快递 我要寄件-->
    <string name="string_let_us_change_the_market_style_again">让我们再一次 改变世界的格局</string>
    <string name="string_let_change_the_industry">LET S CHANGE THE INDUSTRY</string>
    <string name="string_structure_again">STRUCTURE AGAIN</string>
    <string name="strin_receiver_data">收件人信息</string>
    <string name="string_send">寄</string>
    <string name="string_please_input_sender_detail_address_and_tel">请输入寄件人详细地址&amp;联系方式</string>
    <string name="string_receive">收</string>
    <string name="string_please_input_receive_detail_address_and_tel">请输入收件人详细地址&amp;联系方式</string>
    <string name="string_right_brackets"> ">" </string>
    <string name="string_goods_data">物品信息</string>
    <string name="string_weight_unit">重量(Kg):</string>
    <string name="string_pay_method">付款方式:</string>
    <string name="string_send_pay">寄付&#160;&#160;</string>
    <string name="string_receive_pay">到&#160;&#160;&#160;&#160;付</string>
    <string name="string_visit_time">上门时间:</string>
    <string name="string_month_balance">月结&#160;&#160;</string>
    <string name="string_pre_charge">预充值</string>
    <string name="string_submit">提交</string>
    <!--同城快递 我要寄件-->
    <!--同城快递 我要寄件 新建地址-->
    <string name="string_name">姓名:</string>
    <string name="string_tel">手机号码:</string>
    <string name="string_loc_area">所在区域:</string>
    <string name="string_detail_address">详细地址:</string>
    <string name="string_setting_default_address">设置为默认地址</string>
    <string name="string_input_or_select">请选择或输入</string>
    <string name="string_tel_contact">手机通讯录</string>
    <!--同城快递 我要寄件 新建地址-->

    <!--popupwindow-->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="sex">性别</string>
    <!--popupwindow-->
</resources>
