<?xml version="1.0" encoding="utf-8"?>
<com.gototongcheng.widget.scrollview.SpringScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@color/color_tongcheng_site_check_white_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent" android:layout_height="@dimen/dimen_140dp"
            android:background="@color/transparent"
            android:layout_marginBottom="@dimen/dimen_10dp"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_100dp"
                android:background="@mipmap/goto_top_tongcheng_bg_green"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_97dp"
                    android:background="@mipmap/gaolou"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/string_i_am_young_i_need_rush"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_13dp"
                        android:layout_marginLeft="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_25dp"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_we_are_young_dream"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_14dp"
                        android:layout_marginLeft="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_can_not_wait"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_14dp"
                        android:layout_marginLeft="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        />
                </LinearLayout>


            </FrameLayout>
            <ImageView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@mipmap/goto_tongcheng_site_check_top_img_bg"
                />

        </FrameLayout>

        <include layout="@layout/common_area_select_lly"/>

        <include layout="@layout/common_site_find_nearby_map_lly"/>

        <RelativeLayout
            android:layout_width="@dimen/dimen_140dp"
            android:layout_height="@dimen/dimen_40dp"
            android:background="@drawable/shape_common_submit_deep_green_bg"
            android:padding="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:layout_gravity="center_horizontal"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_select"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/dimen_15dp"
                android:textStyle="bold"
                />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:text="@string/string_site_detail"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14dp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:layout_marginBottom="@dimen/dimen_70dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:text="@string/string_address_service_site"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_14dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:text="@string/string_name_tel_service_site"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_14dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                />

        </LinearLayout>
    </LinearLayout>
</com.gototongcheng.widget.scrollview.SpringScrollView>